# tims-cli-tools

./: .gitignore  README.md  README_dev.md  README_moving_to_py314.md  README_testing.md  README_tims_bu_info.md  README_tims_invoice.md  README_tims_payroll.md  invoice_transformer.bat  justfile  pyproject.toml  quick_df_look.py  tims_bu_info.toml  tims_invoice.bat  tims_payroll.bat  tims_payroll_example.toml
src/tims_cli_tools/: classes.py  desc.py  ensure.py  field.py  file_utils.py  invoice_classes.py  pandas_utils.py  payroll_classes.py  payroll_spreadsheets.py  payroll_sql.py  payroll_toml_json_schema.py  payroll_toml_validations.py  price.py  subcat.py  tims_bu_info.py  tims_invoice.py  tims_invoice_transformer.py  tims_payroll.py
tests/: conftest.py  test_classes.py  test_ensure.py  test_invoice_classes.py  test_pandas_utils.py  test_pip_audit.py  test_tims_invoice.py  test_tims_invoice_transformer.py  test_tims_payroll.py
tims_cli_tools/: tims_invoice_transformer.py
