[project]
name = "tims-cli-tools"
version = "0.4.0"
description = "TIMS CLI Tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "toolz>=1.0.0",
    "types-jsonschema>=4.25.1.20250822",
    "types-pytz>=2025.2.0.20250809",
    "xlsxwriter>=3.2.5",
]

[project.scripts]
tims_invoice = "tims_cli_tools.tims_invoice:main"
tims_bu_info = "tims_cli_tools.tims_bu_info:main"
tims_payroll = "tims_cli_tools.tims_payroll:main"

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "genson>=1.3.0",
    "just>=0.8.165",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "rust-just>=1.42.4",
]

[tool.ruff]
target-version = "py313"

include = ["src/**.py", "tests/**.py"]
exclude = ["src/before.py"]

lint.select = [
    "B",    # bugbear:    potential bugs
    "DTZ",  # datetimez:  warn about missing timezones
    "F",    # pyflakes:   potential errors
    "FURB", # refurb:     refurbishing and modernizing Python codebases
    "PERF", # perflint:   avoid performance anti-patterns
    "PL",   # pylint:     the oldest static code analyser ( sometimes a bit pedantic)
    "RUF",  # ruff:       rules introduced by ruff
    "S",    # bandit:     security issues
    "SIM",  # simplify:   helps you simplify your code
    "UP",   # pyupgrade:  upgrade syntax or newer versions of the language
]
lint.ignore = []

[tool.ruff.lint.per-file-ignores]
# Some checks don't make sense in unit tests
"tests/*.py" = [
    "S101",    # Use of `assert` detected
    "PLR0133", # Two constants compared in a comparison, consider replacing `1 == 1"
]

[tool.pytest.ini_options]
pythonpath = ["./src"]
testpaths = ["./tests"]

[[tool.mypy.overrides]]
module = "toolz.*"
ignore_missing_imports = true
