[project]
name = "tims-cli-tools"
version = "0.9.0"
description = "TIMS CLI Tools"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.3",
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "toolz>=1.1.0",
    "types-jsonschema>=4.25.1.20251009",
    "types-openpyxl>=3.1.5.20250919",
    "types-pytz>=2025.2.0.20251108",
    "xlsxwriter>=3.2.9",
]

[project.scripts]
tims_invoice = "tims_cli_tools.tims_invoice:main"
tims_payroll = "tims_cli_tools.tims_payroll:main"

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "genson>=1.3",
    "just>=0.8",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.9",
    "rust-just>=1.45.0",
]

[tool.ruff]
target-version = "py314"

include = ["src/**.py", "tests/**.py"]
exclude = ["src/before.py"]

lint.select = [
    "B",    # bugbear:    potential bugs
    "DTZ",  # datetimez:  warn about missing timezones
    "F",    # pyflakes:   potential errors
    "FURB", # refurb:     refurbishing and modernizing Python codebases
    "PERF", # perflint:   avoid performance anti-patterns
    "PL",   # pylint:     the oldest static code analyser ( sometimes a bit pedantic)
    "RUF",  # ruff:       rules introduced by ruff
    "S",    # bandit:     security issues
    "SIM",  # simplify:   helps you simplify your code
    "UP",   # pyupgrade:  upgrade syntax or newer versions of the language
]
lint.ignore = []

[tool.ruff.lint.per-file-ignores]
# Some checks don't make sense in unit tests
"tests/*.py" = [
    "S101",    # Use of `assert` detected
    "PLR0133", # Two constants compared in a comparison, consider replacing `1 == 1"
]

[tool.pytest.ini_options]
pythonpath = ["./src"]
testpaths = ["./tests"]

[[tool.mypy.overrides]]
module = "toolz.*"
ignore_missing_imports = true

[tool.uv]
package = true
